# golio/generate/schema/http/go/api/openapi.yaml
@@ -7,74 +7,7 @@ servers:
 - url: /
 tags:
 - name: golio
-- name: auth
-- name: article
 paths:
-  /jwt:
-    delete:
-      deprecated: false
-      description: ""
-      parameters: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                properties: {}
-                type: object
-          description: Success
-      security: []
-      summary: JWTログアウト
-      tags:
-      - golio
-      - auth
-    post:
-      deprecated: false
-      description: ""
-      parameters: []
-      requestBody:
-        content:
-          application/json:
-            example:
-              user: sunjin110@gmail.com
-              pass: password
-            schema:
-              $ref: '#/components/schemas/_jwt_post_request'
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/_jwt_post_200_response'
-          description: Success
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/_jwt_post_404_response'
-          description: Record not found
-      security: []
-      summary: JWT認証
-      tags:
-      - golio
-      - auth
-  /user:
-    post:
-      deprecated: false
-      description: ""
-      parameters: []
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                properties: {}
-                type: object
-          description: Success
-      security: []
-      summary: ユーザー作成
-      tags:
-      - golio
   /articles:
     get:
       deprecated: false
@@ -117,13 +50,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/_jwt_post_404_response'
+                $ref: '#/components/schemas/_articles_get_400_response'
           description: Invalid input
       security: []
       summary: 記事一覧取得
       tags:
       - golio
-      - article
     post:
       deprecated: false
       description: ""
@@ -147,13 +79,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/_jwt_post_404_response'
+                $ref: '#/components/schemas/_articles_get_400_response'
           description: Invalid input
       security: []
       summary: 記事投稿
       tags:
       - golio
-      - article
     put:
       deprecated: false
       description: ""
@@ -177,13 +108,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/_jwt_post_404_response'
+                $ref: '#/components/schemas/_articles_get_400_response'
           description: Invalid input
       security: []
       summary: 記事更新
       tags:
       - golio
-      - article
   /articles/{article_id}:
     get:
       deprecated: false
@@ -215,13 +145,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/_jwt_post_404_response'
+                $ref: '#/components/schemas/_articles_get_400_response'
           description: Invalid input
       security: []
       summary: 記事取得
       tags:
       - golio
-      - article
   /hello:
     get:
       deprecated: false
@@ -243,90 +172,8 @@ paths:
       summary: hello
       tags:
       - golio
-  /auth/google-oauth/callback:
-    get:
-      deprecated: false
-      description: ""
-      parameters:
-      - description: ""
-        explode: true
-        in: query
-        name: code
-        required: true
-        schema:
-          type: string
-        style: form
-      - description: ""
-        explode: true
-        in: query
-        name: scope
-        required: true
-        schema:
-          type: string
-        style: form
-      - description: ""
-        explode: true
-        in: query
-        name: authuser
-        required: true
-        schema:
-          type: string
-        style: form
-      - description: ""
-        explode: true
-        in: query
-        name: prompt
-        required: true
-        schema:
-          type: string
-        style: form
-      responses:
-        "302":
-          content:
-            application/json:
-              schema:
-                properties: {}
-                type: object
-          description: Redirect
-      security: []
-      summary: Google OAuth2.0からのコールバックで叩かれるもの
-      tags:
-      - golio
-      - auth
 components:
   schemas:
-    _jwt_post_request:
-      properties:
-        user:
-          type: string
-        pass:
-          type: string
-      required:
-      - pass
-      - user
-      type: object
-    _jwt_post_200_response:
-      example:
-        session: session
-      properties:
-        session:
-          type: string
-      required:
-      - session
-      type: object
-    _jwt_post_404_response:
-      example:
-        code: 0
-        message: message
-      properties:
-        code:
-          type: integer
-        message:
-          type: string
-      required:
-      - code
-      - message
-      type: object
     _articles_get_200_response_articles_inner:
       example:
         created_at: created_at
@@ -370,6 +217,19 @@ components:
       required:
       - articles
       - paging
+      type: object
+    _articles_get_400_response:
+      example:
+        code: 0
+        message: message
+      properties:
+        code:
+          type: integer
+        message:
+          type: string
+      required:
+      - code
+      - message
       type: object
     _articles_put_request:
       properties:
