# golio/generate/schema/http/go/openapi/model__jwt_post_200_response.go
@@ -1,37 +1,0 @@
-/*
- * My Project
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-
-
-
-type JwtPost200Response struct {
-
-	Session string `json:"session"`
-}
-
-// AssertJwtPost200ResponseRequired checks if the required fields are not zero-ed
-func AssertJwtPost200ResponseRequired(obj JwtPost200Response) error {
-	elements := map[string]interface{}{
-		"session": obj.Session,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	return nil
-}
-
-// AssertJwtPost200ResponseConstraints checks if the values respects the defined constraints
-func AssertJwtPost200ResponseConstraints(obj JwtPost200Response) error {
-	return nil
-}
