# golio/generate/schema/http/go/openapi/model__jwt_post_request.go
@@ -1,40 +1,0 @@
-/*
- * My Project
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-
-
-
-type JwtPostRequest struct {
-
-	User string `json:"user"`
-
-	Pass string `json:"pass"`
-}
-
-// AssertJwtPostRequestRequired checks if the required fields are not zero-ed
-func AssertJwtPostRequestRequired(obj JwtPostRequest) error {
-	elements := map[string]interface{}{
-		"user": obj.User,
-		"pass": obj.Pass,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	return nil
-}
-
-// AssertJwtPostRequestConstraints checks if the values respects the defined constraints
-func AssertJwtPostRequestConstraints(obj JwtPostRequest) error {
-	return nil
-}
